--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     ]
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "date-and-time": "^0.14.2",
     "debug": "~2.6.9",
+    "dotenv": "^16.3.1",
     "ejs": "~2.5.7",
     "escape-html": "^1.0.3",
     "exceljs": "^4.3.0",
@@ -37,10 +39,12 @@
     "hashids": "^1.2.2",
     "http-errors": "~1.6.2",
     "jest": "^27.0.4",
+    "joi": "^17.9.2",
     "json5": "^2.1.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.12",
     "mariadb": "^2.5.2",
+    "mongoose": "^7.4.3",
     "morgan": "~1.9.0",
     "node-cron": "^3.0.2",
     "node-fetch": "2.6.6",
@@ -50,5 +54,8 @@
     "winston": "^3.2.1",
     "xlsx": "^0.16.9",
     "xlsx-populate": "^1.21.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
